Add text recognition

--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,9 @@ pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.1.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+pytesseract==0.3.10
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 PyYAML==6.0.1
